[edit] nodes from spreadsheet

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <title>Network</title>
 
     <style type="text/css">
-        #mynetwork {
-          width: 600px;
-          height: 400px;
+        #network {
+          width: 100vw;
+          height: 100vh;
           border: 1px solid lightgray;
         }
     </style>
@@ -20,9 +20,7 @@
 
 <body>
 
-    <h1>Network</h1>
-
-    <div id="mynetwork"></div>
+    <div id="network"></div>
 
     <script src="./node_modules/tabletop/src/tabletop.min.js"></script>
     <script src="./node_modules/vis-network/dist/vis-network.min.js"></script>
