[add] btn zoom & dezomm

--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
     <div id="network"></div>
 
+    <div>
+        <button id="zoom-plus">+</button>
+        <button id="zoom-moins">-</button>
+    </div>
+
     <aside id="volet" class="volet">
         <button id="volet-close" class="btn">Fermer</button>
 
