--- a/index.html
+++ b/index.html
@@ -25,12 +25,21 @@
         <ul id="search-result" class="search-list"></ul>
     </div>
 
-    <div id="network"></div>
-
     <div>
         <button id="zoom-plus">+</button>
         <button id="zoom-moins">-</button>
+        
+        <button class="btn-group" data-group="collegue">collegue</button>
+        <button class="btn-group" data-group="contemporain">contemporain</button>
+        <button class="btn-group" data-group="collaborateur">collaborateur</button>
+        <button class="btn-group" data-group="famille">famille</button>
+        <button class="btn-group" data-group="otlet">otlet</button>
+        <button class="btn-group" data-group="œuvre">œuvre</button>
+        <button class="btn-group" data-group="évènement">évènement</button>
+        <button class="btn-group" data-group="institution">institution</button>
     </div>
+
+    <div id="network"></div>
 
     <aside id="volet" class="volet">
         <button id="volet-close" class="btn">Fermer</button>
