[edit] interactive btns

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <ul id="search-result" class="search-list"></ul>
     </div>
 
-    <div>
-        <button id="zoom-plus">+</button>
-        <button id="zoom-moins">-</button>
+    <div class="commands-box">
+        <button id="zoom-plus" class="zoom">+</button>
+        <button id="zoom-moins" class="zoom">-</button>
         
         <button class="btn-group" data-group="collegue">collegue</button>
         <button class="btn-group" data-group="contemporain">contemporain</button>
