--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </aside>
 
     <script src="./libs/vis-network/vis-network.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/fuse.js/dist/fuse.js"></script>
+    <script src="./libs/fuse/fuse.min.js"></script>
     <script src="./assets/main.js"></script>
 
 </body>
