--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </div>
 
     <div class="commands-box">
-        <button id="zoom-plus" class="zoom">+</button>
-        <button id="zoom-moins" class="zoom">-</button>
-        
+        <button id="zoom-plus" class="controle">+</button>
+        <button id="zoom-moins" class="controle">-</button>
+
         <button class="btn-group" data-group="collegue">collegue</button>
         <button class="btn-group" data-group="contemporain">contemporain</button>
         <button class="btn-group" data-group="collaborateur">collaborateur</button>
@@ -37,13 +37,13 @@
         <button class="btn-group" data-group="œuvre">œuvre</button>
         <button class="btn-group" data-group="évènement">évènement</button>
         <button class="btn-group" data-group="institution">institution</button>
+
+        <button id="lateral-control" class="controle">Panneau latéral</button>
     </div>
 
     <div id="network"></div>
 
     <aside id="volet" class="volet">
-        <button id="volet-close" class="btn">Fermer</button>
-
         <section id="volet-content"></section>
     </aside>
 
