--- a/index.html
+++ b/index.html
@@ -26,17 +26,21 @@
     </div>
 
     <div class="commands-box">
-        <button id="zoom-plus" class="controle">+</button>
-        <button id="zoom-moins" class="controle">-</button>
-
-        <button class="btn-group" data-group="collegue">collegue</button>
-        <button class="btn-group" data-group="contemporain">contemporain</button>
-        <button class="btn-group" data-group="collaborateur">collaborateur</button>
-        <button class="btn-group" data-group="famille">famille</button>
         <button class="btn-group" data-group="otlet">otlet</button>
+        <button class="btn-group" data-group="famille">famille</button>
+        <button class="btn-group" data-group="collegue">collegue</button>
+        <button class="btn-group" data-group="collaborateur">collaborateur</button>
+        <button class="btn-group" data-group="contemporain">contemporain</button>
+
         <button class="btn-group" data-group="œuvre">œuvre</button>
         <button class="btn-group" data-group="évènement">évènement</button>
         <button class="btn-group" data-group="institution">institution</button>
+    </div>
+
+    <div class="commands-box">
+        <button id="zoom-plus" class="controle">+</button>
+        <button id="zoom-moins" class="controle">-</button>
+        <button id="zoom-general" class="controle">Vue générale</button>
 
         <button id="lateral-control" class="controle">Panneau latéral</button>
     </div>
