--- a/index.html
+++ b/index.html
@@ -53,19 +53,24 @@
 
             <div id="volet-meta-label" class="volet__label"></div>
 
-            <h3 class="volet-libelle">Dates extrèmes</h3>
+            <div id="volet-meta-date"></div>
+            <div id="volet-meta-pays"></div>
+            <div id="volet-meta-discipline"></div>
+            <div id="volet-meta-description"></div>
+
+            <h3 id="volet-libelle-date" class="volet-libelle">Dates extrèmes</h3>
             <div class="volet__dates">
                 <time id="volet-meta-date-naissance"></time>
                 <time id="volet-meta-date-mort"></time>
             </div>
 
-            <h3 class="volet-libelle">Pays</h3>
+            <h3 id="volet-libelle-pays" class="volet-libelle">Pays</h3>
             <div id="volet-meta-pays" class="volet__pays"></div>
 
-            <h3 class="volet-libelle">Discipline</h3>
+            <h3 id="volet-libelle-discipline" class="volet-libelle">Discipline</h3>
             <div id="volet-meta-discipline" class="volet__discipline"></div>
             
-            <h3 class="volet-libelle">Description</h3>
+            <h3 id="volet-libelle-description" class="volet-libelle">Description</h3>
             <div id="volet-meta-description" class="volet__description"></div>
         </section>
     </aside>
