[add] connexion list ascend. in volet

--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
             <div id="volet-meta-pays"></div>
             <div id="volet-meta-discipline"></div>
             <div id="volet-meta-description"></div>
+
+            <ul id="volet-connexion" class="connexion-list"></ul>
         </section>
     </aside>
 
