[fix] select node out of context & btn return selc

--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
 
     <aside id="volet" class="volet">
         <section id="volet-content" class="volet-content">
+            <button id="zoom-selection" class="controle">Visualiser</button>
+
             <img id="volet-meta-img" class="volet__img" src="" alt="">
 
             <div id="volet-meta-label" class="volet__label"></div>
-
             <div id="volet-meta-date"></div>
             <div id="volet-meta-pays"></div>
             <div id="volet-meta-discipline"></div>
