[add] nœuds translucides au survol

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="commands-box">
         <button class="btn-group" data-group="otlet">otlet</button>
         <button class="btn-group" data-group="famille">famille</button>
-        <button class="btn-group" data-group="collegue">collegue</button>
+        <button class="btn-group" data-group="collegue">collègue</button>
         <button class="btn-group" data-group="collaborateur">collaborateur</button>
         <button class="btn-group" data-group="contemporain">contemporain</button>
 
@@ -43,6 +43,8 @@
         <button id="zoom-general" class="controle">Vue générale</button>
 
         <button id="lateral-control" class="controle">Panneau latéral</button>
+
+        <a href="./database.html">Base de données</a>
     </div>
 
     <div id="network"></div>
