[fix] cache empty fiche content

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </section>
 
         <aside id="fiche" class="lateral lateral--right">
-            <section id="fiche-content" class="fiche-content">
+            <section id="fiche-content" class="fiche__content">
                 <button id="zoom-selection" class="controle">Visualiser</button>
     
                 <img id="fiche-meta-img" class="fiche__img" src="" alt="">
