[edit] beautify volet

--- a/index.html
+++ b/index.html
@@ -86,14 +86,20 @@
             <button id="zoom-general" class="command-board__btn">Vue générale</button>
         </section>
 
-        <aside id="fiche" class="lateral lateral--right">
+        <aside id="fiche" class="lateral lateral--right fiche">
             <section id="fiche-content" class="fiche__content">
                 <button id="zoom-selection" class="controle">Visualiser</button>
+
+                <div class="fiche__identite">
+                    <img id="fiche-meta-img" class="fiche__img" src="" alt="">
+
+                    <div>
+                        <div id="fiche-meta-label" class="fiche__label"></div>
+                        <div id="fiche-meta-date"></div>
+                    </div>
+                </div>
     
-                <img id="fiche-meta-img" class="fiche__img" src="" alt="">
     
-                <div id="fiche-meta-label" class="fiche__label"></div>
-                <div id="fiche-meta-date"></div>
                 <div id="fiche-meta-pays"></div>
                 <div id="fiche-meta-discipline"></div>
                 <div id="fiche-meta-description"></div>
