--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
                 <img class="header__logo" src="./assets/logos/logootletcoul.png" alt="Logo Otletosphère">
             </a>
 
+            <nav class="navigation">
+                <ul class="navigation__list">
+                    <li class="navigation__link"><a href="#">À propos</a></li>
+                    <li class="navigation__link"><a href="#">Base de données</a></li>
+                </ul>
+            </nav>
+
             <div>
                 <img class="header__logo" src="./assets/logos/logo_CMH.png" alt="Logo OtletOsphère">
                 <img class="header__logo" src="./assets/logos/logo_cnrs.png" alt="Logo OtletOsphère">
@@ -38,14 +45,14 @@
             </div>
         </section>
 
-        <nav class="navigation">
-            <div id="filtre-control" class="navigation__button">
+        <section class="toolbar">
+            <div id="filtre-control" class="toolbar__button">
                 <div class="burger">
                     <div class="burger__branch"></div>
                     <div class="burger__branch"></div>
                     <div class="burger__branch"></div>
                 </div>
-                <span class="navigation__libelle">Filtres</span>
+                <span class="toolbar__libelle">Filtres</span>
             </div>
 
             <div class="search-box">
@@ -53,15 +60,15 @@
                 <ul id="search-result" class="search-list"></ul>
             </div>
 
-            <div id="fiche-control" class="navigation__button navigation__button--important">
-                <span class="navigation__libelle">Fiche</span>
+            <div id="fiche-control" class="toolbar__button toolbar__button--important">
+                <span class="toolbar__libelle">Fiche</span>
                 <div class="burger">
                     <div class="burger__branch"></div>
                     <div class="burger__branch"></div>
                     <div class="burger__branch"></div>
                 </div>
             </div>
-        </nav>
+        </section>
     </header>
 
     <main>
