--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <nav class="navigation">
                 <ul class="navigation__list">
                     <li class="navigation__link"><a href="#">À propos</a></li>
-                    <li class="navigation__link"><a href="#">Base de données</a></li>
+                    <li class="navigation__link"><a href="./database.html">Base de données</a></li>
                 </ul>
             </nav>
 
