[add] scroll between sections intro & graph

--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@
 
 <body>
 
-    <header class="header">
-        <section class="header__top">
-            <a class="header__identite" href="/Network">
+    <section class="entete">
+
+        <section id="introduction" class="introduction">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam nihil rem alias incidunt tempore soluta nulla dolores nesciunt reiciendis nobis cum impedit delectus aperiam possimus, in ratione, reprehenderit aut! Vero officia magni ipsum ipsam cum! Ipsum est cupiditate, accusantium quos ex eaque iste labore laborum doloremque possimus ab enim ipsa voluptatum dolores tempora esse nihil iusto perferendis. Possimus deleniti at excepturi alias, enim, recusandae, doloribus quaerat nobis fugiat reiciendis pariatur cum. Quis, voluptatum incidunt at consectetur quaerat modi omnis tempore aliquam temporibus. Tempore ipsum possimus quis provident maiores dolores aliquid sit quidem magnam optio in maxime eos libero minima natus, recusandae exercitationem. Quaerat aspernatur sunt minus. Iusto quo repellat vel veritatis reiciendis numquam obcaecati vitae unde commodi repudiandae consectetur, mollitia quas tempora neque laboriosam voluptas impedit veniam. Libero vel at quibusdam ipsa molestias pariatur expedita officia modi porro cumque nihil dolor, animi, deleniti perspiciatis quis placeat tempora non eos quos laudantium! Minima, quo inventore vero nostrum qui iusto perspiciatis fuga adipisci? Ducimus, ut ab eaque sint provident amet fuga facere magni velit eum reprehenderit molestiae cupiditate a magnam soluta tempore doloremque ipsa labore natus praesentium eligendi nulla aliquid quam nesciunt. Aliquid, labore dolor. Dolore velit alias nemo error quam dignissimos.
+        </section>
+
+        <header id="header" class="entete__top" role="banner">
+            <a class="entete__identite" href="/Network">
                 <h1 class="title-site"><span class="title-site__bold">Otlet</span>osphère</h1>
-                <img class="header__logo" src="./assets/logos/logootletcoul.png" alt="Logo Otletosphère">
+                <img class="entete__logo" src="./assets/logos/logootletcoul.png" alt="Logo Otletosphère">
             </a>
 
             <nav class="navigation">
@@ -35,18 +40,18 @@
             </nav>
 
             <div>
-                <img class="header__logo" src="./assets/logos/logo_CMH.png" alt="Logo OtletOsphère">
-                <img class="header__logo" src="./assets/logos/logo_cnrs.png" alt="Logo OtletOsphère">
-                <img class="header__logo" src="./assets/logos/logo_enssib.png" alt="Logo OtletOsphère">
-                <img class="header__logo" src="./assets/logos/logo_mica.png" alt="Logo OtletOsphère">
-                <img class="header__logo" src="./assets/logos/logo_msh.png" alt="Logo OtletOsphère">
-                <img class="header__logo" src="./assets/logos/logo_mundaneum.png" alt="Logo OtletOsphère">
-                <img class="header__logo" src="./assets/logos/logo_ubm.png" alt="Logo OtletOsphère">
+                <img class="entete__logo" src="./assets/logos/logo_CMH.png" alt="Logo OtletOsphère">
+                <img class="entete__logo" src="./assets/logos/logo_cnrs.png" alt="Logo OtletOsphère">
+                <img class="entete__logo" src="./assets/logos/logo_enssib.png" alt="Logo OtletOsphère">
+                <img class="entete__logo" src="./assets/logos/logo_mica.png" alt="Logo OtletOsphère">
+                <img class="entete__logo" src="./assets/logos/logo_msh.png" alt="Logo OtletOsphère">
+                <img class="entete__logo" src="./assets/logos/logo_mundaneum.png" alt="Logo OtletOsphère">
+                <img class="entete__logo" src="./assets/logos/logo_ubm.png" alt="Logo OtletOsphère">
             </div>
-        </section>
+        </header>
 
         <section class="toolbar">
-            <div id="filtre-control" class="toolbar__button">
+            <div id="filtre-control" class="toolbar__button" role="button">
                 <div class="burger">
                     <div class="burger__branch"></div>
                     <div class="burger__branch"></div>
@@ -60,7 +65,7 @@
                 <ul id="search-result" class="search-list"></ul>
             </div>
 
-            <div id="fiche-control" class="toolbar__button toolbar__button--important">
+            <div id="fiche-control" class="toolbar__button toolbar__button--important" role="button">
                 <span class="toolbar__libelle">Fiche</span>
                 <div class="burger">
                     <div class="burger__branch"></div>
@@ -69,7 +74,7 @@
                 </div>
             </div>
         </section>
-    </header>
+    </section>
 
     <main>
         
