[edit] changement noms outils

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
                 <nav class="navigation">
                     <ul class="navigation__list">
                         <li class="navigation__link" onclick="movement.goTo('introduction');">À propos</li>
-                        <li class="navigation__link" onclick="movement.goTo('graph');">Graph</li>
-                        <li class="navigation__link" onclick="movement.goTo('board');">Base de données</li>
+                        <li class="navigation__link" onclick="movement.goTo('graph');">Réseau</li>
+                        <li class="navigation__link" onclick="movement.goTo('board');">Fiches</li>
                     </ul>
                 </nav>
 
@@ -69,7 +69,7 @@
                     <ul id="search-result" class="search-list"></ul>
                 </div>
 
-                <button id="fiche-control" class="btn-fiche">Fiche</button>
+                <button id="fiche-control" class="btn-fiche">Détails</button>
             </header>
     
             <section class="toolbar">
@@ -108,7 +108,7 @@
             <div class="command-board">
                 <button id="zoom-plus" class="command-board__btn">+</button>
                 <button id="zoom-moins" class="command-board__btn">-</button>
-                <button id="zoom-general" class="command-board__btn">Vue générale</button>
+                <button id="zoom-general" class="command-board__btn">Réinitialiser</button>
             </div>
 
         </section>
