[add] tri ordre alphabétique

--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
         </section>
 
         <section class="board">
-            <div id="board-content" class="board__wrapper"></div>
+            <div class="board__wrapper">
+                <ul id="sort-alphabetic" class="sort-alphabetic-list"></ul>
+                <div id="board-content" class="board__conteneur"></div>
+            </div>
         </section>
 
         <aside id="fiche" class="lateral lateral--right fiche">
