[edit] fiche : liens couleurs

--- a/index.html
+++ b/index.html
@@ -141,8 +141,10 @@
                 <div id="fiche-meta-pays" class="fiche__couple"></div>
                 <div id="fiche-meta-discipline" class="fiche__couple"></div>
                 <div id="fiche-meta-description"></div>
+
+                <div id="fiche-connexion" class="connexions"></div>
     
-                <ul id="fiche-connexion" class="connexion-list"></ul>
+                <!-- <ul id="fiche-connexion" class="connexion-list"></ul> -->
             </main>
         </aside>
 
