--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
                     <button class="btn-group" data-group="collegue">collègues</button>
                     <button class="btn-group" data-group="collaborateur">collaborateurs</button>
                     <button class="btn-group" data-group="contemporain">contemporains</button>
+                    <button class="btn-group" data-group="opposant">opposants</button>
                 </div>
 
                 <div class="toolbar__section">
