[add] interface alphabétique

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
         <section class="board">
             <div class="board__wrapper">
-                <ul id="sort-alphabetic" class="sort-alphabetic-list"></ul>
+                <ul id="board-alphabetic" class="sort-alphabetic-list"></ul>
                 <div id="board-content" class="board__conteneur"></div>
             </div>
         </section>
