[add] lexique deroulant

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         </section>
 
         <section class="board">
-            <div class="board__wrapper">
+            <div id="board-wrapper" class="board__wrapper">
                 <ul id="board-alphabetic" class="sort-alphabetic-list"></ul>
                 <div id="board-content" class="board__conteneur"></div>
             </div>
