[add] traduction anglais

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
                 <div class="entete__identite" onclick="movement.goTo('reseau');">
                     <h1 class="title-site"><span class="title-site__bold">Otlet</span>osphère</h1>
                 </div>
+
+                <div class="lang-box">
+                    <div id="lang-fr" data-lang="français" class="lang-box__flag lang-box__flag--fr lang-box__flag--active"></div>
+                    <div id="lang-en" data-lang="english" class="lang-box__flag lang-box__flag--en"></div>
+                </div>
     
                 <nav class="navigation">
                     <ul class="navigation__list">
