[add] typo de titre

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                     <img id="fiche-meta-img" class="fiche__img" src="" alt="">
 
                     <div>
-                        <span id="fiche-meta-label" class="fiche__label"></span>
+                        <h2 id="fiche-meta-label" class="fiche__label"></h2>
                         <span id="fiche-meta-date"></span>
                     </div>
                 </div>
