[add] overflow justif connexion

--- a/index.html
+++ b/index.html
@@ -165,6 +165,8 @@
 
     </main>
 
+    <div id="overflow" class="overflow"></div>
+
     <script src="./libs/vis-network/vis-network.min.js"></script>
     <script src="./libs/fuse/fuse.min.js"></script>
     <script src="./assets/main.js"></script>
