--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <div>
                         <h2 id="fiche-meta-label" class="fiche__label"></h2>
                         <span id="fiche-meta-date"></span>
-                        <a id="fiche-wiki-link" class="fiche__wiki-link" title="Page wikipédia" target="_blank" href="">W</a>
+                        <a id="fiche-wiki-link" class="fiche__wiki-link" title="Page wikipédia liée" target="_blank" href=""></a>
                     </div>
                 </div>
     
