--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <!-- LIBRAIRIES CSS -->
-    <link rel="stylesheet" href="./libs/bootstrap/css/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="./libs/bootstrap-grid.min.css">
     <!-- LIBRAIRIES CSS end -->
     <link rel="stylesheet" href="./assets/main.css">
 
@@ -249,8 +249,8 @@
     <div id="overflow" class="overflow"></div>
 
     <!-- LIBRAIRIES JS -->
-    <script src="./libs/vis-network/vis-network.min.js"></script>
-    <script src="./libs/fuse/fuse.min.js"></script>
+    <script src="./libs/vis-network.min.js"></script>
+    <script src="./libs/fuse.min.js"></script>
     <!-- LIBRAIRIES JS end -->
 
     <script src="./assets/main.js"></script>
