[edit] tutoriel traduction : graph et lang defaut volet

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
 
                 <div class="lang-box">
-                    <div id="lang-fr" data-lang="Fr" class="lang-box__flag lang-box__flag--fr lang-box__flag--active"></div>
+                    <div id="lang-fr" data-lang="Fr" class="lang-box__flag lang-box__flag--fr"></div>
                     <div id="lang-en" data-lang="En" class="lang-box__flag lang-box__flag--en"></div>
                 </div>
     
