[edit] new controls lateral tiroir

--- a/index.html
+++ b/index.html
@@ -128,7 +128,6 @@
         <section class="network-wrapper">
 
             <button id="filtre-open" class="network__btn network__btn--left || d-lg-none" title="Afficher les fitres"></button>
-            <button id="fiche-open" class="network__btn network__btn--right" title="Afficher les détails"></button>
 
             <div id="network" class="network"></div>
 
@@ -203,10 +202,8 @@
         -->
 
         <aside id="fiche" class="lateral lateral--right fiche">
-            <header class="lateral__entete">
-                <button id="zoom-selection" class="lateral__btn-control lateral__btn-control--imp lateral__btn-control--hidde" disabled data-lang-fr="Visualiser" data-lang-en="Show">Visualiser</button>
-                <button id="fiche-close" class="lateral__btn-control" data-lang-fr="Fermer" data-lang-en="Close">Fermer</button>
-            </header>
+
+            <button id="fiche-toggle" class="fiche__toggle-btn"><span>◄</span></button>
 
             <main id="fiche-content" class="fiche__content">
 
