[edit] disposition lateral tiroir

--- a/index.html
+++ b/index.html
@@ -210,9 +210,10 @@
                 <div class="fiche__identite">
                     <img id="fiche-meta-img" class="fiche__img" src="" alt="">
 
-                    <div>
+                    <div class="fiche__text-resume">
                         <h2 id="fiche-meta-label" class="fiche__label"></h2>
-                        <span id="fiche-meta-date"></span>
+                        <div id="fiche-meta-date"></div>
+                        <div id="fiche-meta-titre" class="fiche__titre"></div>
                         <a id="fiche-wiki-link" class="fiche__wiki-link" title="Page wikipédia liée" target="_blank" href=""></a>
                     </div>
                 </div>
