[edit] show title by other way

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
     <!-- LIBRAIRIES CSS -->
     <link rel="stylesheet" href="./libs/bootstrap-grid.min.css">
+    <link rel="stylesheet" href="./libs/vis-network.min.css">
     <!-- LIBRAIRIES CSS end -->
     <link rel="stylesheet" href="./assets/main.css">
 
