[edit] buttons group & zoom

--- a/index.html
+++ b/index.html
@@ -142,9 +142,8 @@
             <div id="network" class="network"></div>
 
             <div class="command-board">
-                <div class="command-board__btn-wrapper">
-                    <button id="zoom-plus" class="command-board__btn command-board__btn--zoom" title="Zoom"></button>
-                    <button id="zoom-moins" class="command-board__btn command-board__btn--dezoom" title="Dezoom"></button>
+                <div class="command-board__btn-wrapper d-flex justify-content-center">
+                    <button id="zoom-moins" class="command-board__btn command-board__btn--dezoom" title="Dezoom"></button><button id="zoom-plus" class="command-board__btn command-board__btn--zoom" title="Zoom"></button>
                 </div>
 
                 <button id="zoom-general" class="command-board__btn" title="Vue initiale">Réinitialiser</button>
