[edit] introduction horizontal align

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <section id="introduction" class="introduction">
 
-            <div class="introduction__wrapper || d-flex flex-wrap justify-content-center">
+            <div class="introduction__wrapper || d-flex flex-wrap justify-content-center mt-3">
                 <img class="introduction__img-otlet || col-md-4" src="./assets/photos/OtletPaulColorized.png" alt="">
     
                 <div class="introduction__texte || col-md-6">
