[edit] intro text

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                     <h3>Liens</h3>
     
                     <ul>
+                        <li>Documentation pratique et technique : <a href="https://hyperotlet.github.io/otletosphere/">https://hyperotlet.github.io/otletosphere/</a></li>
                         <li>Carnet de recherche : <a href="https://hyperotlet.hypotheses.org/">https://hyperotlet.hypotheses.org/</a></li>
                         <li>Compte Twitter : <a href="https://twitter.com/hyperotlet">https://twitter.com/hyperotlet</a></li>
                         <li>Frise chronologique interactive sur Paul Otlet : <a href="http://hyperotlet.huma-num.fr/timeline.html">http://hyperotlet.huma-num.fr/timeline.html</a></li>
