[edit] about text

--- a/about.html
+++ b/about.html
@@ -154,7 +154,7 @@
 
                     <h2>À propos</h2>
 
-                    <p>Présentation du projet de l'Otletosphère, dans le cadre du projet de recherche HyperOtlet Elle cherche à mettre en visibilité la forte implication de Paul Otlet au sein des organisations pacifistes internationales ainsi qu'au sein des institutions bibliographiques et documentaires. La mise en oeuvre de ses projets pacifistes, documentaires, féministes lui a permis de côtoyer de nombreuses personnalités scientifiques et artistiques avec lesquelles il a pu entretenir des correspondances, se lier d'amitié, ou collaborer. Ces relations sont souvent connues ou attestées par l'examen des archives du Mundaneum.</p>
+                    <p>L’Otletosphère est une cartographie relationnelle des personnalités et institutions liées à Paul Otlet. Elle cherche à mettre en visibilité la forte implication de Paul Otlet au sein des organisations pacifistes internationales ainsi qu'au sein des institutions bibliographiques et documentaires. La mise en oeuvre de ses projets pacifistes, documentaires, féministes lui a permis de côtoyer de nombreuses personnalités scientifiques et artistiques avec lesquelles il a pu entretenir des correspondances, se lier d'amitié, ou collaborer. Ces relations sont souvent connues ou attestées par l'examen des archives du Mundaneum.</p>
                     <p>À l’exception des images, les contenus de ce site sont sous licence <a href="https://creativecommons.org/licenses/by/2.0/fr/" target="_blank">Creative Commons Attribution</a>. CC BY HyperOtlet (Clément Borel, Guillaume Brioudes, Jean David, Olivier Le Deuff et Arthur Perret)</p>
         
                     <h3>Manuel d'utilisation</h3>
